welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: ')' expected but 'for' found.
	for(i <- 1 to T.length-1)
        ^